--- a/style.css
+++ b/style.css
@@ -11,13 +11,23 @@
     --Light-Grey: hsl(30, 18%, 87%);
     --Wenge-Brown: hsl(30, 10%, 34%);
     --Dark-Charcoal: hsl(24, 5%, 18%);
+
+    --Young-Serif: "Young Serif", serif;
+    --Outfit: "Outfit", sans-serif;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--Outfit);
+    
+    
 }
+
+/*
+border: solid 1px black;
+*/
 
 body{
     display: flex;
@@ -25,4 +35,69 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: var(--Eggshell);
+}
+
+.conteiner{
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+    width: 740px;
+    margin: 100px;
+    padding: 40px;
+    background-color: var(--White);
+    border-radius: 24px;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.info img {
+    width: 100%;
+    border-radius: 12px;
+}
+
+.info__description h1 {
+    font-size: 40px;
+    font-weight: 400;
+    font-family: var(--Young-Serif);
+    color: var(--Dark-Charcoal);
+    margin-bottom: 14px;
+}
+
+.info__description p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: var(--Wenge-Brown);
+}
+
+.preparation-time-list{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    background-color: var(--Rose-White);
+    padding: 24px;
+    border-radius: 12px;
+}
+
+.preparation-time-list span{
+    font-weight: 600;
+    font-size: 20px;
+    color: var(--Nutmeg);
+}
+
+.preparation-time-list ul{
+    display: flex;
+    flex-direction: column;
+    list-style: inside;
+    gap: 16px;
+    
+}
+
+.preparation-time-list ul li strong {
+    color: var(--Wenge-Brown);
 }
