--- a/style.css
+++ b/style.css
@@ -21,8 +21,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: var(--Outfit);
-    
-    
+
 }
 
 /*
@@ -138,7 +137,7 @@ body{
 }
 
 .ingredients ul li span{
-    margin-left: 12px;
+    margin-left: 14px;
     font-size: 16px;
 }
 
@@ -155,6 +154,42 @@ body{
     padding-left: 24px;
 }
 
+.instructions ol li div{
+    padding-left: 14px;
+}
+
 .instructions ol li strong {
     color: var(--Wenge-Brown);
+}
+
+.nutrition {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.nutrition table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.nutrition table tr td {
+    padding: 16px;
+    border-bottom: solid 1px black;
+}
+
+.nutrition table tr td span{
+    margin-left: 16px;
+}
+
+
+
+.table-column-color {
+    color: var(--Dark-Raspberry);
+    font-weight: 700;
+    padding-left: 20px;
+}
+
+.border-white{
+    border-bottom: solid 1px var(--White) !important;
 }
