--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ body{
     border-radius: 24px;
 }
 
+.conteiner hr{
+    height: 1px;
+    color: var(--Light-Grey)
+}
+
 .info{
     display: flex;
     flex-direction: column;
@@ -72,6 +77,12 @@ body{
     font-weight: 400;
     line-height: 24px;
     color: var(--Wenge-Brown);
+}
+
+.steps{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 
 .preparation{
@@ -175,7 +186,7 @@ body{
 
 .nutrition table tr td {
     padding: 16px;
-    border-bottom: solid 1px black;
+    border-bottom: solid 1px var(--Light-Grey);
 }
 
 .nutrition table tr td span{
@@ -192,4 +203,24 @@ body{
 
 .border-white{
     border-bottom: solid 1px var(--White) !important;
+}
+
+@media (max-width: 540px) {
+    .conteiner {
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+
+    .info img{
+        border-radius: 0;
+    }
+
+    .info__description{
+        padding: 20px;
+    }
+    .steps{
+        padding: 20px;
+    }
+    
 }
