--- a/style.css
+++ b/style.css
@@ -210,6 +210,8 @@ body{
         padding: 0;
         margin: 0;
         width: 100%;
+        border-radius: 0;
+        margin-bottom: 40px;
     }
 
     .info img{
